Thu Nov 23 12:20:54 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java: Remove mesh member.
	This means that routines modifying mesh topology (by adding or
	removing a vertex or triangle) have a new Mesh argument, as
	well as routines performing computations on 2D parametrized
	surfaces.
	* src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/patch/Mesh2D.java: New Mesh2D class,
	which extends Mesh.  This class is designed specifically for
	meshing parametrized surfaces.
	* src/org/jcae/mesh/amibe/mesher/ds/MMesh1D.java: Replace HashSet
	and HashMap instances by their Linked* counterpart, so that 1D
	mesh does not depend on objects location in memory.
	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: Pass options
	as a map, and add another option to preserve patch boundary.

Wed Nov 22 13:23:40 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/XMLHelper.java (writeXML): Close output
	stream after file is written, this was not done automatically.

Tue Nov 21 13:06:24 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/VolMesh.java: Dummy data structure to
	read/write volume meshes.
	* src/org/jcae/mesh/bora/xmldata/MESHReader.java: Read .mesh
	files with tetrahedra and return a VolMesh instance.

Sat Nov 18 20:19:59 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/CADShapeEnum.java: New class, to implement
	safe CAD type enumeration.

Fri Nov 17 22:36:52 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java
	  src/org/jcae/mesh/amibe/ds/Vertex2D.java: New Vertex2D class
	extending Vertex to handle meshes on parametrized surfaces.
	This will save some space for 3D meshes.
	* src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/ds/Vertex.java: Replace Mesh.newVertex()
	by Vertex.valueOf(), to follow Java convention on naming static
	factory methods.